[project]
name = "ai-image-generator"
version = "0.1.0"
description = "a generator of ai images using python"
authors = [
    {name = "Willyam Pimentel",email = "willyampimenteldev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "torch (>=2.10.0,<3.0.0)",
    "diffusers (>=0.36.0,<0.37.0)",
    "pillow (>=12.1.1,<13.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
