[project]
name = "ai-image-generator"
version = "0.1.0"
description = "API that generates AI images"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "diffusers>=0.36.0",
    "fastapi>=0.135.1",
    "pillow>=12.1.1",
    "python-dotenv>=1.2.2",
    "torch>=2.10.0",
    "transformers>=5.3.0",
    "uvicorn>=0.41.0",
]
